--- a/page2.html
+++ b/page2.html
@@ -1,1 +1,39 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Вторая страница</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <div class="container">
+            <h1>Добро пожаловать на вторую страницу!</h1>
+        </div>
+    </header>
+    <nav>
+        <div class="container">
+            <ul>
+                <li><a href="index.html">Главная</a></li>
+                <li><a href="#">О нас</a></li>
+                <li><a href="#">Контакты</a></li>
+            </ul>
+        </div>
+    </nav>
+    <section>
+        <div class="container">
+            <h2>О нас</h2>
+            <p>Мы - ваша компания. Мы стремимся предоставить вам лучшие услуги и продукты.</p>
+            <p>Наша команда состоит из опытных профессионалов, готовых помочь вам в любое время.</p>
+            <p>Свяжитесь с нами сегодня, чтобы узнать больше!</p>
+        </div>
+    </section>
+    <footer>
+        <div class="container">
+            <p><a href="index.html">Вернуться на главную страницу</a></p>
+            <p>Контактная информация: ваш адрес, ваш телефон, ваш email</p>
+        </div>
+    </footer>
+</body>
+</html>
